--- a/styles.css
+++ b/styles.css
@@ -61,19 +61,36 @@ Global Styles */
 body {
     background-color: var(--background-color-light);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	padding: 1rem;
     
 }
 
 img {
     width: 300px;
-
 }
+
+.title {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.randomGame {
+  margin: 2rem 0;
+  text-align: center;
+}
+
+#result {
+  font-weight: bold;
+  margin-top: 1rem;
+  color: var(--text-color-light);
+}
+
 /* Media Queries
 Media Queries */
 
 
 @media (max-width: 1280px) {
-
 
 
 }
