--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,29 @@ img {
 /* Media Queries
 Media Queries */
 
-
 @media (max-width: 1280px) {
+  .title {
+    font-size: 1.5rem;
+    text-align: center;
+  }
 
+  .productDisplay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
+  img {
+    width: 90%;
+    max-width: 300px;
+    margin-bottom: 1rem;
+  }
+
+  .randomGame {
+    padding: 1rem;
+  }
+
+  footer {
+    padding: 1rem;
+  }
 }
