--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@ body {
 }
 
 img {
-    width: 300px;
+    max-width: 100%;
+	height: auto;
 }
 
 .title {
@@ -86,8 +87,25 @@ img {
   color: var(--text-color-light);
 }
 
+button, input[type="submit"] {
+  background-color: var(--text-color-light);
+  color: var(--background-color-light);
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.9;
+}
+
 /* Media Queries
 Media Queries */
+
+
+
+
 
 @media (max-width: 1280px) {
   body {
