--- a/styles.css
+++ b/styles.css
@@ -44,14 +44,32 @@ table {
 }
 
 /* Root Variables and Fonts
-Root Variables and Fonts */
+Root Variables and Fonts and stuff for dark mode */
 
 
 :root {
---background-color-light: #ebdbc2;
---text-color-light: #244c44;
--alt-text: white;
+  --background-color: #ebdbc2;       
+  --text-color: #244c44;             
+  --button-bg: #244c44;
+  --button-text: #ffffff;
 }
+
+
+body.dark-mode {
+  --background-color: #244c44;       
+  --text-color: #ebdbc2;             
+  --button-bg: #ebdbc2;
+  --button-text: #244c44;
+}
+
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+
 
 
 
@@ -59,22 +77,29 @@ Root Variables and Fonts */
 Global Styles */
 
 body {
-    background-color: var(--background-color-light);
+    background-color: var(--background-color);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	padding: 1rem;
     
 }
 
 img {
-    max-width: 100%;
-	height: auto;
+    display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 3rem;            
+  font-family: 'Playfair Display', serif;
   text-align: center;
-  margin-bottom: 1rem;
+  padding: 1rem;
+  color: var(--text-color);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
+  letter-spacing: 1.8px;
+  margin-bottom: 2.5rem;
 }
+
 
 .randomGame {
   margin: 2rem 0;
@@ -88,36 +113,67 @@ img {
 }
 
 button, input[type="submit"] {
-  background-color: var(--text-color-light);
-  color: var(--background-color-light);
+  background-color: var(--text-color);
+  color: var(--background-color);
   border: none;
   padding: 0.5rem 1rem;
   border-radius: 4px;
   cursor: pointer;
+
 }
+
+input,
+textarea {
+  font-size: 1rem;
+  padding: 0.75rem;
+  width: 100%;
+  max-width: 600px; /* or whatever width you like */
+  box-sizing: border-box;
+}
+
+
 
 button:hover {
   opacity: 0.9;
 }
 
+nav {
+	text-align: center;
+	padding: 2rem;
+}
+
+p {
+	padding: 1rem;
+	font-size: 2rem;
+	text-align: center;
+	padding-right: 2rem;
+	padding-right: 2rem;
+}
+
+h2 {
+  font-size: 2rem;
+  text-align: center;
+  font-family: 'Playfair Display', serif; 
+  color: var(--text-color);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+  letter-spacing: 1.2px;
+  margin-bottom: 2rem;
+  background: none; 
+}
+
+
+
+
 /* Media Queries
 Media Queries */
 
-
-
-
-
 @media (max-width: 1280px) {
   body {
-    background-color: var(--background-color-light);
-    color: var(--text-color-light);
+    background-color: var(--background-color);
+    color: var(--text-color);
     padding: 1rem;
   }
 
-  .title {
-    font-size: 1.5rem;
-    text-align: center;
-  }
 
   .productDisplay {
     display: flex;
@@ -141,7 +197,7 @@ Media Queries */
   #result {
     margin-top: 1rem;
     font-weight: bold;
-    color: var(--text-color-light);
+    color: var(--text-color);
   }
 
   footer {
